<resources>
    <string name="app_name">boytang - SubBook</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="add">ADD</string>
    <string name="name">Name</string>
    <string name="date">Date started</string>
    <string name="amount">Amount</string>
    <string name="comment">Comment (optional)</string>
</resources>
