<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <ListView
        android:id="@+id/Listy"
        android:layout_width="fill_parent"
        android:layout_height="263dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:scrollbars="vertical">

    </ListView>


    <EditText
        android:id="@+id/editText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@color/colorBackground"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:inputType="date"
        android:background="@color/colorBackground"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:hint="@string/date" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:inputType="numberDecimal"
        android:background="@color/colorBackground"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:hint="@string/amount" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@color/colorBackground"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:hint="@string/comment" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/add" />

</RelativeLayout>

<!-- This layout design is from lonelyTwitter lab
     Modified by me to fit requirements of my code -->